change note, add s4

--- a/languagemodel-machinetranslation-attention.ipynb
+++ b/languagemodel-machinetranslation-attention.ipynb
@@ -23,28 +23,36 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "## Statistical machine translation"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "![](images/translation_1.png)"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "### Learn the translation model"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "- From parallel corpus/data (same text with multiple translations)\n",
     "- Break down P(x|y) to P(x,a|y), with a is **alignment** (correspondence b/t French sentence x and English sentence y, at word level)"
@@ -52,21 +60,27 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "![](images/translation_2.png)"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "Alignment can be many-to-one (>1 words in E are represented by 1 word in F) or one-to-many (often called fertile word), for example 1 single F word **entarte** means: **hit someone with a pie**"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "Even many-to-many translation (phrase-level)\n",
     "\n",
@@ -75,21 +89,27 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "### How to compute argmax?"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "![](images/translation_4.png)"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "Example of a decoding approach:\n",
     "https://youtu.be/XXtpJxZBa2c?t=830"
@@ -97,14 +117,18 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "### Cons of statistical machine translation"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "![](images/translation_5.png)"
    ]
@@ -118,14 +142,18 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "### Definition"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "Do machine translation with a single neural network\n",
     "\n",
@@ -134,7 +162,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "Other uses of sequence-to-sequence (beside NMT):\n",
     "- Summarization (long text -> short text)\n",
@@ -145,14 +175,18 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "![](images/translation_6.png)"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "- **This is test time behavior**. We don't know how to train this yet\n",
     "- The final hidden state of encoder RNN (orange box) become the initial hidden state of decoder RNN\n",
@@ -161,28 +195,36 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "### A CONDITIONAL LANGUAGE MODEL"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "![](images/translation_7.png)"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "### How to train these 2 RNNs"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "- The encoder RNN is just a language model (predicting the next English word), but there are no loss yet.\n",
     "\n",
@@ -193,7 +235,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "- **End-to-end backprop**: so BOTH the hidden state of decoder RNN and encoder RNN are updated during training. Even further, you can unfreeze the word embeddings of the 2 systems and finetune them as well.\n",
     "\n",
@@ -202,21 +246,27 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "### Beam search for neural translation inference (test time)"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "![](images/translation_9.png)"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "Example: https://youtu.be/XXtpJxZBa2c?t=2132\n",
     "\n",
@@ -225,35 +275,45 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "![](images/translation_11.png)"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "Note that normally beam search should result in k hypotheses (from beam search), and each hypotheses ideally will have same size. That's why we don't  normalize the score for each of them (see more below)"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "### Stopping criterion for beam search + pick the best hypotheses"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "![](images/translation_10.png)"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "Since now we have specific stop criterions, thus considered hypotheses won't have same length anymore\n",
     "\n",
@@ -262,21 +322,27 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
-    "# Pros and cons of neural MT over statistical MT"
+    "## Pros and cons of neural MT over statistical MT"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "![](images/translation_13.png)"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "Disadvantages:\n",
     "- less interpretable\n",
@@ -339,6 +405,7 @@
     "- note that dot product is **basic** to calculate the attention scores, which assumes 2 vectors have the same size (hidden states of encoder and decoder)\n",
     "- there is also **multiplicative attention** way to calculate the scores\n",
     "    - use a learnable weight matrix to learn the best way to calculate those scores\n",
+    "    ![](images/translation_20.png)\n",
     "- also, **additive attention**, see more here: https://youtu.be/XXtpJxZBa2c?t=4517"
    ]
   },
@@ -381,7 +448,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "For the last step, **'proceed as in the non-attention seq2seq model'** = treat this concatenation [at;st] **as new hidden state of decoder RNN, and feed it into LSTM/GRU/vanilla RNN**"
+    "For the last step, **'proceed as in the non-attention seq2seq model'** = TODO insert new graph from s4"
    ]
   },
   {
@@ -395,7 +462,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- **Solving the bottleneck problem**: instead of counting on only last hidden state of encoder RNN, **with attention, the decoder RNN can look at all the hidden states of encoder and make decision on which to focus on (based on attention distribution)\n",
+    "- **Solving the bottleneck problem**: instead of counting on only last hidden state of encoder RNN, **with attention, the decoder RNN can look at all the hidden states of encoder and make decision on which to focus on** (based on attention distribution)\n",
     "\n",
     "- **direct connection between encoder and decoder**, similar to shortcut connection (skip connection): as hidden state of decoder will connect to multiple hs of encoders => lots of connection => gradient flowing back easier since there is no bottleneck => **reduce vanishing gradient**\n",
     "\n",
