s4 part 1, new architecture graph

--- a/languagemodel-machinetranslation-attention.ipynb
+++ b/languagemodel-machinetranslation-attention.ipynb
@@ -448,7 +448,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "For the last step, **'proceed as in the non-attention seq2seq model'** = TODO insert new graph from s4"
+    "For the last step, **'proceed as in the non-attention seq2seq model'** = basically treat the [at;st] as the concat[embedding,old_h] => orange arrow (matmul weight + tanh + dropout) => blue arrow (matmul weight + softmax) to have vocab probability and do cross entropy loss on actual y"
    ]
   },
   {
