--- a/fastai_1_stopwords_lemm_svd_nmf.ipynb
+++ b/fastai_1_stopwords_lemm_svd_nmf.ipynb
@@ -26,7 +26,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "# Get data"
    ]
@@ -34,7 +36,9 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "categories = ['alt.atheism', 'talk.religion.misc', 'comp.graphics', 'sci.space']\n",
@@ -46,7 +50,9 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "data": {
@@ -66,7 +72,9 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "data": {
@@ -86,7 +94,9 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -116,7 +126,9 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "data": {
@@ -136,7 +148,9 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "# although we only have 4 topics, we want to see what the model will split out if we adjust # of topics\n",
@@ -146,7 +160,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "# Stop words\n",
     "\n",
@@ -157,14 +173,18 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "# stemming and lemmatization"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "Both involve generating the ROOT form of the word\n",
     "\n",
@@ -175,7 +195,9 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "import spacy"
@@ -184,7 +206,9 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "from spacy.lemmatizer import Lemmatizer\n",
@@ -194,7 +218,9 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "word_list= [\"fly\", \"flies\", \"flying\",\n",
@@ -206,7 +232,9 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "data": {
@@ -236,7 +264,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "# Data processing - Bag of words"
    ]
@@ -244,7 +274,9 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "from sklearn.feature_extraction.text import CountVectorizer, TfidfVectorizer"
@@ -253,7 +285,9 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "import nltk"
@@ -262,7 +296,9 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "vectorizer = CountVectorizer(stop_words='english')"
@@ -271,7 +307,9 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "data": {
@@ -294,7 +332,9 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "vocab = np.array(vectorizer.get_feature_names())"
@@ -303,7 +343,9 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "data": {
@@ -323,7 +365,9 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "data": {
@@ -353,6 +397,13 @@
    "metadata": {},
    "source": [
     "![](images/svd_fb.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "(Read this first) Easy explanation: https://towardsdatascience.com/svd-8c2f72e264f"
    ]
   },
   {
@@ -606,8 +657,8 @@
     "# check U and V are orthonormal\n",
     "\n",
     "np.allclose(U@U.T, np.eye(U.shape[0]))\n",
-    "# because U dot itself is 1 b/c unit vector, \n",
-    "# and U dot other vectors is 0 due to being perpendicular"
+    "# because columns of U dot itself is 1 b/c unit vector, \n",
+    "# and 1 column of U dot other columns of U is 0 due to being perpendicular"
    ]
   },
   {
