--- a/fastai_2_scratchbow_nb_logratiocount.ipynb
+++ b/fastai_2_scratchbow_nb_logratiocount.ipynb
@@ -700,7 +700,7 @@
    ],
    "source": [
     "\n",
-    "TokenCounter = lambda review_index : Counter((movie_reviews.train.x)[review_index].data)\n",
+    "TokenCounter = lambda review_index : Counter(movie_reviews.train.x[review_index].data)\n",
     "TokenCounter(0).items()"
    ]
   },
@@ -892,6 +892,13 @@
    "metadata": {},
    "source": [
     "# Build a sparse matrix in CSR format"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "https://youtu.be/hp2ipC5pW4I?t=1774"
    ]
   },
   {
