--- a/regex.ipynb
+++ b/regex.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,19 +21,15 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
-    "## Match everything nongreedy: Use ?"
+    "## Match everything nongreedy (shortest match first): Use ?"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
-   "metadata": {
-    "hidden": true
-   },
+   "execution_count": 3,
+   "metadata": {},
    "outputs": [],
    "source": [
     "x2= x[3:] + ' 0: '\n",
@@ -43,10 +39,33 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[' bây giờ chúng ta không phải lo lắng về nó ',\n",
+       " ' Tôi sẽ nói với bạn điều này, mặc dù, cả SGD và mạng lưới thần kinh đều không phức tạp về mặt toán học ',\n",
+       " '. ',\n",
+       " ' Chúng gần như hoàn toàn là phép cộng và phép nhân. ',\n",
+       " ' Thủ thuật là rất nhiều trong số họ - giống như hàng tỷ người trong số họ - rất nhiều hơn chúng ta có thể nắm bắt bằng trực giác ',\n",
+       " '. ']"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "res2"
+   ]
+  },
+  {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "## findall: return a list of tuples, each tuple shows \n",
     "\n",
@@ -57,9 +76,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -83,9 +100,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "Another example"
    ]
@@ -93,9 +108,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -113,15 +126,13 @@
     "hello hello1 hello2\n",
     "hello3 hello4 hello55\n",
     "'''\n",
-    "re.compile('hello').findall(temp_text) # use ? in (.+?) to match nongreedy: shortest match first"
+    "re.compile('hello').findall(temp_text)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -140,9 +151,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "## search and group\n",
     "- group(): find ONLY the first match that satisfies the whole regex (ignore grouping). \n",
@@ -153,9 +162,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -176,9 +183,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
