--- a/stanford-languagemodel-machinetranslation-attention.ipynb
+++ b/stanford-languagemodel-machinetranslation-attention.ipynb
@@ -246,27 +246,21 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "### Beam search for neural translation inference (test time)"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "![](images/translation_9.png)"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "Example: https://youtu.be/XXtpJxZBa2c?t=2132\n",
     "\n",
@@ -275,45 +269,35 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "![](images/translation_11.png)"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "Note that normally beam search should result in k hypotheses (from beam search), and each hypotheses ideally will have same size. That's why we don't  normalize the score for each of them (see more below)"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "### Stopping criterion for beam search + pick the best hypotheses"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "![](images/translation_10.png)"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "Since now we have specific stop criterions, thus considered hypotheses won't have same length anymore\n",
     "\n",
@@ -322,27 +306,21 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "## Pros and cons of neural MT over statistical MT"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "![](images/translation_13.png)"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "Disadvantages:\n",
     "- less interpretable\n",
@@ -449,6 +427,13 @@
    "metadata": {},
    "source": [
     "For the last step, **'proceed as in the non-attention seq2seq model'** = basically treat the [at;st] as the concat[embedding,old_h] => orange arrow (matmul weight + tanh + dropout) => blue arrow (matmul weight + softmax) to have vocab probability and do cross entropy loss on actual y"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![](s4/translation_attention_archi.jpg)"
    ]
   },
   {
