--- a/regex.ipynb
+++ b/regex.ipynb
@@ -255,7 +255,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Note that .* is greedy matching: will match as much text as possible (as above to nongreedy ? from above)"
+    "### Note that .* , or .+ is greedy matching: will match as much text as possible (as above to nongreedy ? from above)"
    ]
   },
   {
