new nb for vnmese lm using fastai2

--- a/fastai2_nlp/fastai_vnmese_getdata.ipynb
+++ b/fastai2_nlp/fastai_vnmese_getdata.ipynb
@@ -20,33 +20,44 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
+    "# from fastai2.text.all import *"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "bs=128\n",
     "data_path = Config.data_path()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "PosixPath('/home/quantran/.fastai/data')"
+       "Path('/home/quantran/.fastai/data')"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data_path"
+    "# data_path = Path('/home/quantran/.fastai/data')\n",
+    "# data_path"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,31 +78,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "path"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['vi_wt', 'vi_wt_vocab']"
+       "('viwiki',\n",
+       " PosixPath('/home/quantran/.fastai/data/viwiki'),\n",
+       " ['vi_wt', 'vi_wt_vocab'])"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "lm_fns"
+    "name,path,lm_fns"
    ]
   },
   {
@@ -110,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,7 +146,7 @@
     "    shutil.rmtree(path/'text')\n",
     "\n",
     "\n",
-    "def split_wiki(path,lang):\n",
+    "def split_wiki(path,lang,encoding='utf-8'):\n",
     "    dest = path/'docs'\n",
     "    name = f'{lang}wiki'\n",
     "    if dest.exists():\n",
@@ -151,7 +155,7 @@
     "\n",
     "    dest.mkdir(exist_ok=True, parents=True)\n",
     "    title_re = re.compile(rf'<doc id=\"\\d+\" url=\"https://{lang}.wikipedia.org/wiki\\?curid=\\d+\" title=\"([^\"]+)\">')\n",
-    "    lines = (path/name).open()\n",
+    "    lines = (path/name).open(encoding=encoding)\n",
     "    f=None\n",
     "\n",
     "    for i,l in enumerate(lines):\n",
@@ -160,7 +164,8 @@
     "            title = title_re.findall(l)[0].replace('/','_')\n",
     "            if len(title)>150: continue\n",
     "            if f: f.close()\n",
-    "            f = (dest/f'{title}.txt').open('w')\n",
+    "            f = (dest/f'{title}.txt').open('w', encoding=encoding)\n",
+    "        elif l.startswith('</doc>'): continue\n",
     "        else: f.write(l)\n",
     "    f.close()\n",
     "    return dest"
@@ -206,6 +211,117 @@
    ],
    "source": [
     "# get_wiki(path,lang)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<doc id=\"13\" url=\"https://vi.wikipedia.org/wiki?curid=13\" title=\"Tiếng Việt\">\r\n",
+      "Tiếng Việt\r\n",
+      "\r\n",
+      "Tiếng Việt, còn gọi tiếng Việt Nam, tiếng Kinh hay Việt ngữ, là ngôn ngữ của người Việt (dân tộc Kinh) và là ngôn ngữ chính thức tại Việt Nam. Đây là tiếng mẹ đẻ của khoảng 85% dân cư Việt Nam, cùng với hơn 4 triệu Việt kiều. Tiếng Việt còn là ngôn ngữ thứ hai của các dân tộc thiểu số tại Việt Nam. Mặc dù tiếng Việt có một số từ vựng vay mượn từ tiếng Hán và trước đây dùng chữ Nôm – một hệ chữ viết dựa trên chữ Hán – để viết nhưng tiếng Việt được coi là một trong số các ngôn ngữ thuộc ngữ hệ Nam Á có số người nói nhiều nhất (nhiều hơn một số lần so với các ngôn ngữ khác cùng hệ cộng lại). Ngày nay, tiếng Việt dùng bảng chữ cái Latinh, gọi là chữ Quốc ngữ, cùng các dấu thanh để viết.\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "!head -n4 {path}/{name}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "100000\n",
+      "200000\n",
+      "300000\n",
+      "400000\n",
+      "500000\n",
+      "600000\n",
+      "700000\n",
+      "800000\n",
+      "900000\n",
+      "1000000\n",
+      "1100000\n",
+      "1200000\n",
+      "1300000\n",
+      "1400000\n",
+      "1500000\n",
+      "1600000\n",
+      "1700000\n",
+      "1800000\n",
+      "1900000\n",
+      "2000000\n",
+      "2100000\n",
+      "2200000\n",
+      "2300000\n",
+      "2400000\n",
+      "2500000\n",
+      "2600000\n",
+      "2700000\n",
+      "2800000\n"
+     ]
+    }
+   ],
+   "source": [
+    "dest = split_wiki(path,lang)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "PosixPath('/home/quantran/.fastai/data/viwiki/docs')"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dest"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[PosixPath('/home/quantran/.fastai/data/viwiki/docs/Hội chứng Alice ở xứ sở thần tiên.txt'),\n",
+       " PosixPath('/home/quantran/.fastai/data/viwiki/docs/Nicolas Sarkozy.txt'),\n",
+       " PosixPath('/home/quantran/.fastai/data/viwiki/docs/Công nghệ pháp lý.txt'),\n",
+       " PosixPath('/home/quantran/.fastai/data/viwiki/docs/TT (bài hát).txt'),\n",
+       " PosixPath('/home/quantran/.fastai/data/viwiki/docs/Adolf von Glümer.txt')]"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dest.ls()[:5]"
    ]
   }
  ],
